added -or flag to not set override redirect
This allows a window manager to manage the dmenu window.

--- a/dmenu.1
+++ b/dmenu.1
@@ -47,6 +47,9 @@ X until stdin reaches end\-of\-file.
 .B \-i
 dmenu matches menu items case insensitively.
 .TP
+.B \-or
+dmenu does not set the Override Redirect flag.
+.TP
 .BI \-l " lines"
 dmenu lists items vertically, with the given number of lines.
 .TP
