--- a/dmenu.1
+++ b/dmenu.1
@@ -99,6 +99,9 @@ defines the selected background color.
 .BI \-sf " color"
 defines the selected foreground color.
 .TP
+.BI \-cc " color"
+defines the cursor color.
+.TP
 .B \-v
 prints version information to stdout, then exits.
 .TP
