added actual support for multiple fonts
Unless I'm stupid and the documentation for Xft, fontconfig, etc. does
tell me how do specify a font set through a single XftFontOpenName()
call, dmenu was relying on fallbacks instead of actually taking a
fontset. This makes the fonts array sized at BUFSIZ and adds an option
to override defaults with any number of fonts up to that.

--- a/dmenu.1
+++ b/dmenu.1
@@ -82,7 +82,10 @@ from 0.
 defines the prompt to be displayed to the left of the input field.
 .TP
 .BI \-fn " font"
-defines the font or font set used.
+defines the font or font set used. You canadd multiple fonts to the fontset with
+multiple
+.BI \-fn
+options.
 .TP
 .BI \-nb " color"
 defines the normal background color.
